objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Area_Pretendida__c</fullName>
        <label>Área Pretendida (m²)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contato comercial PJ, Contato comercial PF, Prospect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Atividades</relationshipLabel>
        <relationshipName>Atividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demonstrou_Interesse__c</fullName>
        <label>Demonstrou Interesse?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expectativa_de_Venda__c</fullName>
        <label>Expectativa de Venda</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contato Inicial/Renovação do Não</fullName>
                </value>
                <value>
                    <fullName>Negociação</fullName>
                </value>
                <value>
                    <fullName>Processos/Documentação</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Necessidade_T_cnica__c</fullName>
        <label>Necessidade Técnica</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Água</fullName>
                </value>
                <value>
                    <fullName>Exaustão</fullName>
                </value>
                <value>
                    <fullName>Esgoto</fullName>
                </value>
                <value>
                    <fullName>ARC</fullName>
                </value>
                <value>
                    <fullName>Elétrica</fullName>
                </value>
                <value>
                    <fullName>Modif. Estrutural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outros_Coment_rios__c</fullName>
        <label>Outros Comentários</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outros_Shoppings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outros Shoppings</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pr_ximos_Passos__c</fullName>
        <label>Próximos Passos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renovar ou Não</fullName>
                </value>
                <value>
                    <fullName>Agendar Próxima Reunião</fullName>
                </value>
                <value>
                    <fullName>Enviar Proposta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prazo_Loca_o__c</fullName>
        <label>Prazo Locação (meses)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pretens_o_de_Pagamento__c</fullName>
        <label>Pretensão de Pagamento</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                    <default>true</default>
                    <label>Pendente</label>
                </value>
                <value>
                    <fullName>Realizada</fullName>
                </value>
                <value>
                    <fullName>Desmarcada</fullName>
                </value>
                <value>
                    <fullName>Remarcada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_ID_da_conta__c</fullName>
        <formula>Cliente__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID da conta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telefone</fullName>
                </value>
                <value>
                    <fullName>Presencial Externa</fullName>
                </value>
                <value>
                    <fullName>Visita ao Shopping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>